
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:padding="10dp" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hu_server_addr" android:id="@+id/text_server_address"></TextView>

        <EditText
            android:id="@+id/edit_server_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" >
        </EditText>

        <TextView android:text="@string/hu_server_port" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/text_server_port" android:layout_marginTop="10dp"></TextView>

        <EditText
            android:id="@+id/edit_server_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/null_string" >
</EditText>
    </LinearLayout>
